--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
     color: black;
     top: 0 !important;
     scroll-behavior: smooth;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
 
@@ -21,7 +21,13 @@
 .rs-picker-input .rs-picker-toggle {
   background-color: black !important;
 }
-
+.soon {
+  color: #df6a25;
+  font-size: 120px;
+}
+.mt16 {
+  margin-top: 11rem;
+}
 .skiptranslate {
   display: none;
 }
@@ -231,30 +237,29 @@ input[type="radio"]:checked::before {
   .swiper-button-prev {
     background-color: white !important;
     border-radius: 50% !important;
-    padding: 2.2rem !important;
+    padding: 3.6rem !important;
     top: 40% !important;
     color: rgba(0, 0, 0, 0.716) !important;
     width: 56px !important;
     transform: scale(0.5) !important;
-    box-shadow: 0px 4px 10px 0.5px rgba(0, 0, 0, 0.1) !important;
-    left: -6px !important;
+    box-shadow: 3px 3px 8px 8.5px rgba(0, 0, 0, 0.1) !important;
+    left: -20px !important;
     z-index: 500 !important;
     fill: black !important;
     position: absolute !important;
-    opacity: 0.8;
+ 
   }
 
   .swiper-button-next {
     background-color: white !important;
-    opacity: 0.8;
     border-radius: 50% !important;
-    padding: 2.2rem !important;
+    padding: 3.6rem !important;
     color: rgba(0, 0, 0, 0.716) !important;
     transform: scale(0.5) !important;
-    right: -6px !important;
+    right: -18px !important;
     top: 40% !important;
 
-    box-shadow: 0px 4px 10px 0.5px rgba(0, 0, 0, 0.1) !important;
+    box-shadow: 3px 3px 8px 8.5px rgba(0, 0, 0, 0.1) !important;
     fill: black !important;
     z-index: 500 !important;
   }
@@ -693,7 +698,7 @@ input[type="radio"]:checked::before {
 }
 
 .constructionText {
-  background-color: #f0f0f0;
+  
   width: 50vw;
   padding: 6rem;
   color: black;
@@ -771,7 +776,7 @@ input[type="radio"]:checked::before {
 }
 
 .constructionText {
-  background-color: #f0f0f0;
+  
   width: 50vw;
   padding: 6rem;
   color: black;
@@ -855,7 +860,7 @@ input[type="radio"]:checked::before {
   padding: 2.2rem !important;
   color: rgba(0, 0, 0, 0.716) !important;
   transform: scale(0.5) !important;
-  right: -6px !important;
+  right: -18px !important;
   top: 45% !important;
 
   box-shadow: 0px 4px 10px 0.5px rgba(0, 0, 0, 0.1) !important;
