testiranje api, admn, b2c

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,9 +43,9 @@
 }
 input[type="radio"]:checked {
  
-  background-color: #de6a26; 
-  border-color: #de6a26; 
-  color: #de6a26; 
+  background-color: #052922;
+  border-color: #052922;
+  color: #052922;
 }
 input[type="radio"] {
 
@@ -62,7 +62,7 @@ input[type="radio"]:checked::before {
   display: block;
   width: 10px;
   height: 10px;
-  background-color: #de6a26; 
+  background-color: #052922;
   border-radius: 50%; 
   margin: 3px; 
 }
@@ -126,7 +126,7 @@ input[type="radio"]:checked::before {
   left: 0;
   height: 100%;
   width: 0%;
-  background-color: #de6a26;
+  background-color: #052922;
   animation: progress-bar 5s linear forwards;
 }
 
@@ -137,7 +137,7 @@ input[type="radio"]:checked::before {
   left: 0;
   height: 1px;
   width: 0;
-  background-color: #de6a26;
+  background-color: #052922;
   animation: progress-bar1 0.5s linear forwards;
 }
 
@@ -557,7 +557,7 @@ input[type="radio"]:checked::before {
   position: absolute;
   top: -93px;
   left: 0;
-  background-color: #2bc48a;
+  background-color: #B89980;
   color: white;
   padding: 8px;
   border-radius: 5px;
@@ -832,7 +832,7 @@ input[type="radio"]:checked::before {
   margin: auto;
   width: 104%;
   height: 4px;
-  background-color: #de6a26;
+  background-color: #052922;
 }
 
 /* .color {
@@ -908,12 +908,12 @@ input[type="radio"]:checked::before {
   margin: auto;
   width: 104%;
   height: 4px;
-  background-color: #de6a26;
+  background-color: #052922;
 }
 
 .customScroll::-webkit-scrollbar {
   width: 0.3rem;
-  background-color: #de6a26
+  background-color: #052922
 }
 
 .customScroll::-webkit-scrollbar-track {
@@ -921,11 +921,11 @@ input[type="radio"]:checked::before {
 }
 
 .customScroll::-webkit-scrollbar-thumb {
-  background: #de6a26;
+  background: #052922;
 }
 
 .customScroll::-webkit-scrollbar-thumb:hover {
-  background: #de6a26;
+  background: #052922;
 }
 
 .textArea textarea {
