86c0vxk3d - desktop testiranje 86c0vxk75 - mobile testiranje

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,10 @@
   }
 }
 
+.swiper-mobile-disabled {
+    display: none !important;
+}
+
 .notranslate .rs-picker-default .rs-btn,
 .rs-picker-default .rs-picker-toggle,
 .rs-picker-input .rs-btn,
